--- a/Vue/register.html
+++ b/Vue/register.html
@@ -95,7 +95,7 @@
             }
 
             /* ********** footer :: Start ********** */
-            #footer {height: 200px; text-align: center;}
+            #footer {height: 200px; text-align: center; bottom:0; width:100%;}
             #footer #f-top {height: 320px;}
             #footer #f-bottom {height: 200px;}
             #f-bottom {background-color: #363636; color: #fff;}
