--- a/Vue/myStore.html
+++ b/Vue/myStore.html
@@ -9,7 +9,6 @@
         <style>
             * {margin: 0; padding: 0; box-sizing: border-box;}
             #wrap, #wrap>div {width: 100%;}
-            #header {height: 63px;}
             .container {height: 100%; margin: auto;}
             html, body {width: 100%; height: 100%;}
             html {font-size: 10px;}
@@ -20,7 +19,7 @@
             h2 {font-size: 50px;}
 
             /* ********** header :: Start ********** */
-            #header {border-bottom: 1px solid #cccccc;}
+            #header {border-bottom: 1px solid #cccccc; height: 63px;}
             #header .container {position: relative;}
             #header h1 {
                 width: 169px;
@@ -65,10 +64,9 @@
 
             /* ********** store_register :: Start ********** */
             .mid {height: auto; text-align: center;}
-            .list {width: 700px; margin: 0 400px;}
+            .list {font-family: "Nanum Gothic", sans-serif; font-weight: 600; width: 700px; margin: 0 auto;}
             .list img{width: 230px; height: 230px; object-fit: cover;}
             .list h1, h2, h5 {margin: 9px; align-content: center;}
-            .list {margin: 0; font-family: "Nanum Gothic", sans-serif; font-weight: 600;}
             .list .restaurant {margin-top: 30px; width: 700px; height: 300px;}
             .list .info {margin-right: 20px; width: 60%; float: right; margin-left: 10px;}
             .list .name {font-size: 30px;}
