--- a/Vue/store_detail.html
+++ b/Vue/store_detail.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>가게등록</title>
+        <title>가게 상세 정보</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -131,13 +131,13 @@
 			<div class="container1">
 				<div class="mid">
 					<div class="img1">
-						<img src="./image/ti.jpg" style="width: 100%; height: 100%;">
+						<img src="./image/1.jpg" style="width: 100%; height: 100%;">
 					</div>
 					<div class="img2">
-						<img src="./image/t.jpg" style="width: 100%; height: 100%;">
+						<img src="./image/2.jpeg" style="width: 100%; height: 100%;">
 					</div>
 					<div class="img3">
-						<img src="./image/coffee.jpg" style="width: 100%; height: 100%;">
+						<img src="./image/3.jpeg" style="width: 100%; height: 100%;">
 					</div>
 					<!-- 가게 정보 -->
 					<div class="store_info" v-for="s in info">
