--- a/Vue/myStoreUpdate.html
+++ b/Vue/myStoreUpdate.html
@@ -279,7 +279,7 @@
 					return{
 						loading:true,
 						errored:false,
-						info: []
+                        info: [],
 					} // return
 				}, // data
 				mounted() {
@@ -295,7 +295,6 @@
 	            methods:{
 	            	updateStore(){
                         const store = {
-                            id: token,
                             store_img:this.info.store_img,
                             store_name:this.info.store_name,
                             store_address:this.info.store_address,
@@ -310,13 +309,14 @@
                             parking:this.info.parking,
                             opentime:this.info.opentime,
                             closetime:this.info.closetime,
-                            dayoff:this.info.dayoff
+                            dayoff:this.info.dayoff,
+                            id:token
                         };
 
 	            		axios
                             .put('http://127.0.0.1:7771/api/updateStore', store)
                             .then((response) => {
-                            console.log(response);
+                                console.log(response);
                             })
                             .catch(error => {
                                 console.log(error);
@@ -325,7 +325,7 @@
                             .finally(() => {
                                 this.loading = false;
                                 alert('가게가 수정되었습니다.');
-	            				location.href="./myStore.html";
+                                location.href = "./myStore.html";
                             })
 	            	}, // updateStore
 	            	logout(){
