--- a/Vue/login.html
+++ b/Vue/login.html
@@ -189,7 +189,7 @@
                 methods: {
                     login() {
                         axios
-                            .post('http://localhost:7771/food/login', {
+                            .post('http://localhost:7771/user/login', {
                                 id: this.id,
                                 password: this.password
                             })
