--- a/Vue/myBestStore.html
+++ b/Vue/myBestStore.html
@@ -138,7 +138,7 @@
                     <h2>망고 플레이트</h2>
                 </div>
                 <div class="list">
-                    <h2 style="margin-top: 30px; font-size: 20px; text-align: center;">내가 등록한 가게</h2>
+                    <h2 style="margin-top: 30px; font-size: 20px; text-align: center;">내 맛집 리스트</h2>
                     <div class="restaurant" v-for="s in info">
                         <div style="width: 35%; float: left;">
                             <a :href="projectHref(s.store_id)"><img src="s.store_img"></a><br>
@@ -197,7 +197,7 @@
                 },
                 mounted(){
                     axios
-                        .get("http://127.0.0.1:7771/api/myBestStores/"+token)
+                        .get("http://127.0.0.1:7771/store/myBestStores/"+token)
                         .then(response=>(this.info = response.data))
                         .catch(error=>{
                             console.log(error);
@@ -208,7 +208,7 @@
                 methods: {
                     deletebestStore(store_id) {
                         axios
-                            .delete('http://localhost:7771/api/deletebestStore/'+store_id)
+                            .delete('http://localhost:7771/store/deletebestStore/'+store_id)
                             .then(response => {
                                     alert('삭제되었습니다.');
                                     location.reload(true)
